added commit.java
still need to adjust to interface as directly in notion
still need to do checkout